[gd_scene load_steps=25 format=3 uid="uid://c34y44hyr84x8"]

[ext_resource type="Script" path="res://Menu/PlayerStatsUI.gd" id="1_7ic74"]
[ext_resource type="FontFile" uid="uid://r7guvh1d66vn" path="res://Theme/HyperSuperItalic.ttf" id="1_t5han"]
[ext_resource type="Script" path="res://Menu/ScaledContainerFullscreen.gd" id="2_6bo4n"]
[ext_resource type="Texture2D" uid="uid://c581j2jbggqsi" path="res://Sprites/Medals/ChronoMedal.png" id="2_dw584"]
[ext_resource type="Texture2D" uid="uid://35aory7p4nfg" path="res://Sprites/Medals/GoldMedal.png" id="3_ywnbw"]
[ext_resource type="Texture2D" uid="uid://f2qxo4nistek" path="res://Sprites/Medals/SilverMedal.png" id="4_e8nth"]
[ext_resource type="Texture2D" uid="uid://ccn0rkde3jon3" path="res://Sprites/Medals/BronzeMedal.png" id="5_b2d0t"]
[ext_resource type="Texture2D" uid="uid://bn001urlc58ay" path="res://Sprites/Medals/BlitzMedal.png" id="6_g3avm"]
[ext_resource type="FontFile" uid="uid://dckyut1557c7h" path="res://DarkTheme/Fonts/Ubuntu-L.ttf" id="8_swq1x"]

[sub_resource type="Theme" id="Theme_863pa"]
default_font = ExtResource("1_t5han")
default_font_size = 20
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/colors/font_shadow_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
Label/constants/outline_size = 6
Label/constants/shadow_offset_x = 4
Label/constants/shadow_offset_y = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0tqxf"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0, 0, 0, 0.870588)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xl3p0"]
bg_color = Color(0.207843, 0.207843, 0.207843, 1)
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 8
corner_radius_top_right = 5
corner_radius_bottom_right = 8
corner_radius_bottom_left = 5
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4ewd"]
bg_color = Color(0.439216, 0.439216, 0.439216, 1)
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.129412, 0.129412, 0.129412, 1)
corner_radius_top_left = 8
corner_radius_top_right = 5
corner_radius_bottom_right = 8
corner_radius_bottom_left = 5
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gnfbv"]
bg_color = Color(0.207843, 0.207843, 0.207843, 1)
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.352941, 0.780392, 0.67451, 1)
corner_radius_top_left = 8
corner_radius_top_right = 5
corner_radius_bottom_right = 8
corner_radius_bottom_left = 5
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ofcni"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 1)
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 8
corner_radius_top_right = 5
corner_radius_bottom_right = 8
corner_radius_bottom_left = 5
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_vuv8h"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_dlqso"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aunuk"]
bg_color = Color(0.4, 0.4, 0.4, 0.65098)
border_color = Color(0.407843, 0.0980392, 0.109804, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ocpm4"]
bg_color = Color(0.607843, 0.729412, 0.54902, 1)
border_color = Color(0.407843, 0.0980392, 0.109804, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_right = 8.0
shadow_color = Color(0.184314, 0.352941, 0.12549, 1)
shadow_size = 1
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gm2h7"]
bg_color = Color(0.866667, 0.298039, 0.305882, 1)
border_color = Color(0.407843, 0.0980392, 0.109804, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_right = 8.0
shadow_color = Color(0.407843, 0.0980392, 0.109804, 1)
shadow_size = 1
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cjac4"]
bg_color = Color(0.498039, 0.901961, 0.352941, 1)
border_color = Color(0.407843, 0.0980392, 0.109804, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_right = 8.0
shadow_color = Color(0.184314, 0.352941, 0.12549, 1)
shadow_size = 1
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ef7yk"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.392157, 0.392157, 0.392157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w5lrt"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.258824, 0.258824, 0.258824, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_67hwj"]
default_font = ExtResource("1_t5han")
default_font_size = 26
Button/styles/disabled = SubResource("StyleBoxFlat_xl3p0")
Button/styles/focus = SubResource("StyleBoxFlat_v4ewd")
Button/styles/hover = SubResource("StyleBoxFlat_gnfbv")
Button/styles/normal = SubResource("StyleBoxFlat_xl3p0")
Button/styles/pressed = SubResource("StyleBoxFlat_ofcni")
CheckBox/icons/checked = SubResource("PlaceholderTexture2D_vuv8h")
CheckBox/icons/unchecked = SubResource("PlaceholderTexture2D_dlqso")
CheckBox/styles/focus = SubResource("StyleBoxFlat_aunuk")
CheckBox/styles/hover = SubResource("StyleBoxFlat_aunuk")
CheckBox/styles/hover_pressed = SubResource("StyleBoxFlat_ocpm4")
CheckBox/styles/normal = SubResource("StyleBoxFlat_gm2h7")
CheckBox/styles/pressed = SubResource("StyleBoxFlat_cjac4")
LineEdit/colors/font_uneditable_color = Color(1, 1, 1, 1)
LineEdit/fonts/font = ExtResource("8_swq1x")
LineEdit/styles/focus = SubResource("StyleBoxFlat_ef7yk")
LineEdit/styles/normal = SubResource("StyleBoxFlat_w5lrt")

[node name="PlayerStatsUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7ic74")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -135.0
offset_right = 135.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_863pa")
alignment = 1
script = ExtResource("2_6bo4n")

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Statistics"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_0tqxf")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Playtime"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TotalPlaytime" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "42h"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "("

[node name="IngamePlaytime" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "31h"

[node name="Label4" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "in-game / "

[node name="EditorPlaytime" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "11h"

[node name="Label6" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "editor)"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Medals"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Total Time"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("2_dw584")
expand_mode = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Chrono: "

[node name="ChronoMedals" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("3_ywnbw")
expand_mode = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Gold:"

[node name="TotalGoldMedals" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "2"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("4_e8nth")
expand_mode = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Silver:"

[node name="TotalSilverMedals" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "4"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("5_b2d0t")
expand_mode = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Bronze:"

[node name="TotalBronzeMedals" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
text = "5"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Lap Time"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("6_g3avm")
expand_mode = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Blitz: "

[node name="BlitzMedals" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("3_ywnbw")
expand_mode = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "Gold:"

[node name="LapGoldMedals" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "2"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer3"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("4_e8nth")
expand_mode = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
text = "Silver:"

[node name="LapSilverMedals" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "4"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer4"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("5_b2d0t")
expand_mode = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
text = "Bronze:"

[node name="LapBronzeMedals" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
text = "5"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Ingame Statistics"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
text = "Number Of Attempts: "

[node name="NrAttempts" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1823"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer3/HBoxContainer2"]
layout_mode = 2
text = "Number Of Finishes: "

[node name="NrFinishes" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer3/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "523"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer3/HBoxContainer3"]
layout_mode = 2
text = "Tracks Played: "

[node name="NrTracksPlayed" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer3/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "27"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "Editor Statistics"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer4"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer4/HBoxContainer"]
layout_mode = 2
text = "Objects Placed: "

[node name="NrObjectsPlaced" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer4/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1823"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer4"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer4/HBoxContainer2"]
layout_mode = 2
text = "Tracks Uploaded: "

[node name="NrTracksUploaded" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer4/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "523"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer4"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer4/HBoxContainer3"]
layout_mode = 2
text = "Tracks Rated: "

[node name="NrTracksRated" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer4/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "27"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_67hwj")
text = "Close"
